cmake_minimum_required(VERSION 3.23)
project(CSESProblemSet)

set(CMAKE_CXX_STANDARD 20)
set(GCC_COVERAGE_COMPILE_FLAGS "-O2 -Wall -Wextra -DLOCAL")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )

add_executable(CSESProblemSet main.cpp)
add_subdirectory(IntroductoryProblems)
add_subdirectory(SortingAndSearching)
add_subdirectory(DynamicProgramming)
add_subdirectory(GraphAlgorithms)
add_subdirectory(RangeQueries)
add_subdirectory(TreeAlgorithms)
add_subdirectory(Mathematics)
add_subdirectory(StringAlgorithms)
add_subdirectory(Geometry)
add_subdirectory(AdvancedTechniques)
add_subdirectory(AdditionalProblems)