add_executable(ArrayDescription ArrayDescription.cpp)
add_executable(DiceCombinations DiceCombinations.cpp)
add_executable(MinimizingCoins MinimizingCoins.cpp)
add_executable(MoneySums MoneySums.cpp)
add_executable(RectangleCutting RectangleCutting.cpp)
add_executable(EditDistance EditDistance.cpp)
add_executable(CoinCombinationsI CoinCombinationsI.cpp)
add_executable(CoinCombinationsII CoinCombinationsII.cpp)
add_executable(GridPathsDP GridPaths.cpp)
add_executable(TwoSetsII TwoSetsII.cpp)
add_executable(RemoveDigits RemoveDigits.cpp)
add_executable(BookShop BookShop.cpp)
add_executable(Projects Projects.cpp)
add_executable(ElevatorRides ElevatorRides.cpp)
add_executable(IncreasingSubsequence IncreasingSubsequence.cpp)
add_executable(RemovalGame RemovalGame.cpp)
add_executable(CountingTowers CountingTowers.cpp)