add_executable(CountingRooms CountingRooms.cpp)
add_executable(BuildingRoads BuildingRoads.cpp)
add_executable(GameRoutes GameRoutes.cpp)
add_executable(HighScore HighScore.cpp)
add_executable(BuildingTeams BuildingTeams.cpp)
add_executable(MessageRoute MessageRoute.cpp)
add_executable(Labyrinth.cpp Labyrinth.cpp)
add_executable(RoundTrip RoundTrip.cpp)
add_executable(RoadConstruction RoadConstruction.cpp)
add_executable(ShortestRoutesI ShortestRoutesI.cpp)
add_executable(ShortestRoutesII ShortestRoutesII.cpp)
add_executable(RoundTripII RoundTripII.cpp)
add_executable(CycleFinding CycleFinding.cpp)
add_executable(Monsters Monsters.cpp)
add_executable(FlightDiscount FlightDiscount.cpp)
add_executable(Investigation Investigation.cpp)
add_executable(RoadReparation RoadReparation.cpp)
add_executable(LongestFlightRoute LongestFlightRoute.cpp)
add_executable(KnightsTour KnightsTour.cpp)
add_executable(CourseSchedule CourseSchedule.cpp)
add_executable(FlightRoutes FlightRoutes.cpp)
add_executable(HamiltonianFlights HamiltonianFlights.cpp)