add_executable(WeirdAlgorithm WeirdAlgorithm.cpp)
add_executable(MissingNumber MissingNumber.cpp)
add_executable(Repetitions Repetitions.cpp)
add_executable(IncreasingArray IncreasingArray.cpp)
add_executable(Permutations Permutations.cpp)
add_executable(BitStrings BitStrings.cpp)
add_executable(GrayCode GrayCode.cpp)
add_executable(AppleDivision AppleDivision.cpp)
add_executable(TrailingZeroes TrailingZeroes.cpp)
add_executable(PalindromeReorder PalindromeReorder.cpp)
add_executable(TowerOfHanoi TowerOfHanoi.cpp)
add_executable(CreatingStrings CreatingStrings.cpp)
add_executable(NumberSpiral NumberSpiral.cpp)
add_executable(GridPaths GridPaths.cpp)
add_executable(CoinPiles CoinPiles.cpp)
add_executable(ChessboardAndQueens ChessboardAndQueens.cpp)
add_executable(TwoSets TwoSets.cpp)
add_executable(DigitQueries DigitQueries.cpp)
add_executable(TwoKnights TwoKnights.cpp)