add_executable(CommonDivisors CommonDivisors.cpp)
add_executable(ThrowingDice ThrowingDice.cpp)
add_executable(DiceProbability DiceProbability.cpp)
add_executable(PrimeMultiples PrimeMultiples.cpp)
add_executable(Exponentiation Exponentiation.cpp)
add_executable(ExponentiationII ExponentiationII.cpp)
add_executable(CountingDivisors CountingDivisors.cpp)
add_executable(CreatingStringsII CreatingStringsII.cpp)
add_executable(SumOfDivisors SumOfDivisors.cpp)
add_executable(FibonacciNumbers FibonacciNumbers.cpp)
add_executable(ChristmasParty ChristmasParty.cpp)
add_executable(BinomialCoefficients BinomialCoefficients.cpp)
add_executable(DivisorAnalysis DivisorAnalysis.cpp)
add_executable(BracketSequencesI BracketSequencesI.cpp)
add_executable(GraphPathsI GraphPathsI.cpp)
add_executable(GraphPathsII GraphPathsII.cpp)
add_executable(DistributingApples DistributingApples.cpp)
add_executable(BracketSequencesII BracketSequencesII.cpp)
add_executable(CountingNecklaces CountingNecklaces.cpp)