add_executable(RangeXorQueries RangeXorQueries.cpp)
add_executable(StaticRangeSumQueries StaticRangeSumQueries.cpp)
add_executable(StaticRangeMinimumQueries StaticRangeMinimumQueries.cpp)
add_executable(RangeUpdateQueries RangeUpdateQueries.cpp)
add_executable(DynamicRangeSumQueries DynamicRangeSumQueries.cpp)
add_executable(DynamicRangeMinimumQueries DynamicRangeMinimumQueries.cpp)
add_executable(HotelQueries HotelQueries.cpp)