add_executable(CollectingNumbers CollectingNumbers.cpp)
add_executable(NestedRangesCheck NestedRangesCheck.cpp)
add_executable(DistinctNumbers DistinctNumbers.cpp)
add_executable(Apartments Apartments.cpp)
add_executable(FerrisWheel FerrisWheel.cpp)
add_executable(ConcertTickets ConcertTickets.cpp)
add_executable(RestaurantCustomers RestaurantCustomers.cpp)
add_executable(RoomAllocation RoomAllocation.cpp)
add_executable(SumOfTwoValues SumOfTwoValues.cpp)
add_executable(MaximumSubarraySum MaximumSubarraySum.cpp)
add_executable(FactoryMachines FactoryMachines.cpp)
add_executable(MissingCoinSum MissingCoinSum.cpp)
add_executable(MovieFestival MovieFestival.cpp)
add_executable(StickLengths StickLengths.cpp)
add_executable(Playlist Playlist.cpp)
add_executable(Towers Towers.cpp)
add_executable(TasksAndDeadlines TasksAndDeadlines.cpp)
add_executable(CollectingNumbersII CollectingNumbersII.cpp)
add_executable(TrafficLights TrafficLights.cpp)
add_executable(NearestSmallerValues NearestSmallerValues.cpp)
add_executable(SumOfThreeValues SumOfThreeValues.cpp)
add_executable(SumOfFourValues SumOfFourValues.cpp)
add_executable(JosephusProblemI JosephusProblemI.cpp)
add_executable(JosephusProblemII JosephusProblemII.cpp)
add_executable(MaximumSubarraySumII MaximumSubarraySumII.cpp)
add_executable(SubarraySumsI SubarraySumsI.cpp)
add_executable(SubarraySumsII SubarraySumsII.cpp)
add_executable(SubarrayDivisibility SubarrayDivisibility.cpp)
add_executable(SubarrayDistinctValues SubarrayDistinctValues.cpp)
add_executable(ArrayDivision ArrayDivision.cpp)
add_executable(MovieFestivalII MovieFestivalII.cpp)